--- a/items/templates/navbar.html
+++ b/items/templates/navbar.html
@@ -12,11 +12,15 @@
               <li class="nav-item">
                     <a class="nav-link" href="{% url 'user-login' %}">Login</a>
               </li>
-
+              <li class="nav-item">
+                    <a class="nav-link" href="/accounts/github/login/">Login with Github</></a>
+              </li>
+              <li class="nav-item">
+                    <a class="nav-link" href="/accounts/google/login/">Login with google</></a>
+              </li>
 
         {% else %}
-                  <li class="nav-item">
-                    <a class="nav-link" href="{% url 'wishlist' %}">My Wishlist</></a>
+                  
                   </li>
                   <li class="nav-item">
                     <span class="nav-link disabled" href="#">Welcome, {{request.user}}.</span>
